[package]
name = "homesec-bootstrap"
version = "0.1.0"
authors = ["Tom Havlik <thavlik@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = { git = "https://github.com/servo/bincode.git" }
anyhow = "1.0.12"
rand = "0.7.3"

