[package]
name = "homesec_bootstrap"
version = "0.1.0"
authors = ["Tom Havlik <thavlik@protonmail.com>"]
edition = "2018"
workspace = ".."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = { git = "https://github.com/servo/bincode.git" }
anyhow = "1.0.12"
rand = "0.7.3"
uuid = { version = "0.8.1", features = ["serde"] }
clap = { git = "https://github.com/clap-rs/clap/" }
