[package]
name = "homesec_test"
version = "0.1.0"
authors = ["Tom Havlik <thavlik@protonmail.com>"]
edition = "2018"
workspace = ".."

[dependencies]
anyhow = "1.0.12"
base64 = "0.12.3"
homesec_bootstrap = { path = "../bootstrap" }
bincode = { git = "https://github.com/servo/bincode.git" }

[dependencies.log]
features = ["std"]
version = "^0.4"