[package]
name = "homesec_test"
version = "0.1.0"
authors = ["Tom Havlik <thavlik@protonmail.com>"]
edition = "2018"
workspace = ".."

[dependencies]
anyhow = "1.0.12"
base64 = "0.12.3"
homesec_bootstrap = { path = "../bootstrap" }
bincode = "1.3.3" #bincode = { git = "https://github.com/servo/bincode.git" }
#tokio = { version = "0.2.6", features = ["rt-core", "rt-threaded", "io-driver", "time", "macros"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.1"
kube = { git = "https://github.com/clux/kube-rs.git", rev = "de26af2" }
kube-derive = { git = "https://github.com/clux/kube-rs.git", rev = "de26af2" }
k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_15"] }
serde = "1.0.164"
serde_yaml = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }

[dependencies.log]
features = ["std"]
version = "^0.4"